prevent jumping icons in navbar between collapsed and open state

--- a/assets/sass/navbar.scss
+++ b/assets/sass/navbar.scss
@@ -76,3 +76,16 @@ li.open .ticktac i.running{
     padding-top: 0px;
 }
 */
+
+@media (min-width: $screen-sm-min) {
+    .sidebar-mini.sidebar-collapse .sidebar-menu li.header {
+        border-top-width: 1px;
+        border-top-style: solid;
+        display: block !important;
+        margin-top: 16px;
+        opacity: 0.4;
+        span {
+            display: none !important;
+        }
+    }
+}
